@@ -2,6 +2,8 @@
 0.0.8
 ========================
 
+- added `opt.retry()` method in to the `API` evaluation
+
 ========================
 0.0.7
 ========================
